<resources>
    <string name="app_name">Password Manager</string>
    <string name="placeholder">placeholder</string>
    <string name="more_options">More Options</string>
    <string name="no_files">No Files</string>
    <string name="menu">menu</string>
    <string name="new_file">New File</string>
    <string name="export_file">Export File</string>
    <string name="rename_file">Rename File</string>
    <string name="change_password">Change Password</string>
    <string name="delete_file">Delete "%s"</string>
    <string name="no_entries">No Entries</string>
    <string name="search">Search</string>
    <string name="new_entry">New Entry</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="copy">Copy</string>
    <string name="show_password">Show Password</string>
    <string name="perm_please_allow">Please allow</string>
    <string name="filename">Filename</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_filename">New Filename</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_this_cannot_be_undone">Are you sure? This cannot be undone.</string>
    <string name="open_file">Open File</string>
    <string name="accepted_ext">Invalid file type</string>
    <string name="create_file">Create file</string>
    <string name="create">Create</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="open">Open</string>
    <string name="import_file">Import File</string>
    <string name="export">Export</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="couldnt_find_file">Couldn\'t find file \"%s\"</string>
    <string name="the_filename_cannot_change">The filename cannot be changed</string>
    <string name="filename_was_changed">Error: The filename was changed</string>
    <string name="domain">Domain</string>
    <string name="create_domain">Add Domain</string>
    <string name="error_failed_to_save">Error: failed to save</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="editing_folder">Edit "%s"</string>
    <string name="username">Username</string>
    <string name="save">save</string>
    <string name="importing">Importing</string>
    <string name="error_folder_exists">Folder already exists</string>
    <string name="working">Working…</string>
    <string name="corrupted">Error: file is corrupted</string>
</resources>