<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/domainView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/editButton"
            android:text="@string/placeholder"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/moreButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/details"
            android:padding="6dp"
            android:src="@drawable/chevron"
            app:tint="@color/design_default_color_primary" />

        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/delete"
            android:padding="6dp"
            android:src="@drawable/delete"
            android:visibility="gone"
            app:tint="@color/design_default_color_error"/>

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit"
            android:padding="12dp"
            android:src="@drawable/edit"
            app:tint="@color/design_default_color_primary" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/passwordList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:background="@color/light" />

</RelativeLayout>