<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/textHolder"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/showPasswordButton"
        android:layout_marginStart="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/placeholder"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/passwordView"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/placeholder"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/usernameView"
            tools:ignore="TextViewEdits" />

    </RelativeLayout>

    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/copyButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:src="@drawable/copy"
        android:contentDescription="@string/copy" />

    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/showPasswordButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_toStartOf="@id/copyButton"
        android:padding="10dp"
        android:src="@drawable/eye"
        android:contentDescription="@string/show_password" />

</RelativeLayout>