<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/placeholder"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/moreButton"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/moreButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="6dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/more_options"
            android:src="@drawable/more_horiz"
            app:tint="@color/design_default_color_primary" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/optionsDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:layout_below="@id/title"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/exportImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/export"
                android:src="@drawable/export"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exportImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/export"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/renameImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/rename"
                android:src="@drawable/rename"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/renameImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/rename"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/changePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/changePasswordImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/change_password"
                android:src="@drawable/change_password"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/changePasswordImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/change_password"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/delete"
                app:tint="@color/design_default_color_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deleteImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/delete"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>