<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/export"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/exportImage"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/export"
            android:src="@drawable/export"
            app:tint="@color/design_default_color_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exportImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/export"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/renameImage"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/rename"
            android:src="@drawable/rename"
            app:tint="@color/design_default_color_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/renameImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/rename"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/changePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/changePasswordImage"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/change_password"
            android:src="@drawable/change_password"
            app:tint="@color/design_default_color_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/changePasswordImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/change_password"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/deleteImage"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete"
            app:tint="@color/design_default_color_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deleteImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/delete"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>